--- a/spruced.css
+++ b/spruced.css
@@ -1,6 +1,6 @@
 * {
 
-    width: 1080px;
+    width: 1000px;
     box-sizing: border-box;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
@@ -15,7 +15,7 @@ body {
 header {
 
     color: black;
-    width: 1360px;
+    width: 1300px;
     height: 250px;
     border: 5px solid black;
 
@@ -39,7 +39,7 @@ header img {
     width: 400px;
     height: 200px;
     position: relative;
-    left: 900px;
+    left: 860px;
     top: 20px;
 
 }
@@ -48,7 +48,7 @@ main {
 
     border: 5px solid black;
     height: 600px;
-    width: 1360px;
+    width: 1300px;
     padding-left: 15px;
 
 }
@@ -69,7 +69,12 @@ main p {
 span {
 
     font-weight: bold;
-    font-style: italic;
+}
+
+.spantwo {
+
+    font-weight: bold;
+    font-size: 30px;
 }
 
 section {
@@ -77,9 +82,9 @@ section {
     border: 3px solid black;
     position: relative;
     left: 300px;
-    top: 20px;
+    top: 50px;
     width: 600px;
-    height: 300px;
+    height: 230px;
 
 }
 
